logs/Slang/generated/keywords/5.6.2--keyword_integer.sv.log
name: integer
description: The 'integer' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_integer.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_integer.sv:8:8: error: expected declarator
    bit integer;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_integer.sv:8:16: error: expected declarator
    bit integer;
               ^
